// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Code Converters > 제네릭 없는 단순 API - save 1`] = `
[
  "Resolving Type Parameters",
  "Filtering API Parameters",
]
`;

exports[`Code Converters > 제네릭 없는 단순 API - save 2`] = `{}`;

exports[`Code Converters > 제네릭 없는 단순 API - save 3`] = `
{
  "elementsType": {
    "args": undefined,
    "id": "UserSaveParams",
    "t": "ref",
  },
  "t": "array",
}
`;

exports[`Code Converters > 제네릭 없는 단순 API - save 4`] = `
{
  "spa": ZodArray {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "element": ZodString {
        "and": [Function],
        "array": [Function],
        "base64": [Function],
        "base64url": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "clone": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "default": [Function],
        "describe": [Function],
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "endsWith": [Function],
        "format": null,
        "guid": [Function],
        "includes": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "length": [Function],
        "lowercase": [Function],
        "max": [Function],
        "maxLength": null,
        "meta": [Function],
        "min": [Function],
        "minLength": null,
        "nanoid": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "normalize": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "regex": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "startsWith": [Function],
        "superRefine": [Function],
        "time": [Function],
        "toLowerCase": [Function],
        "toUpperCase": [Function],
        "transform": [Function],
        "trim": [Function],
        "type": "string",
        "ulid": [Function],
        "uppercase": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "xid": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "array",
    },
    "default": [Function],
    "describe": [Function],
    "element": ZodString {
      "and": [Function],
      "array": [Function],
      "base64": [Function],
      "base64url": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "cidrv4": [Function],
      "cidrv6": [Function],
      "clone": [Function],
      "cuid": [Function],
      "cuid2": [Function],
      "date": [Function],
      "datetime": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "string",
      },
      "default": [Function],
      "describe": [Function],
      "duration": [Function],
      "e164": [Function],
      "email": [Function],
      "emoji": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "endsWith": [Function],
      "format": null,
      "guid": [Function],
      "includes": [Function],
      "ipv4": [Function],
      "ipv6": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "jwt": [Function],
      "ksuid": [Function],
      "length": [Function],
      "lowercase": [Function],
      "max": [Function],
      "maxLength": null,
      "meta": [Function],
      "min": [Function],
      "minLength": null,
      "nanoid": [Function],
      "nonempty": [Function],
      "nonoptional": [Function],
      "normalize": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "regex": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "startsWith": [Function],
      "superRefine": [Function],
      "time": [Function],
      "toLowerCase": [Function],
      "toUpperCase": [Function],
      "transform": [Function],
      "trim": [Function],
      "type": "string",
      "ulid": [Function],
      "uppercase": [Function],
      "url": [Function],
      "uuid": [Function],
      "uuidv4": [Function],
      "uuidv6": [Function],
      "uuidv7": [Function],
      "xid": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "length": [Function],
    "max": [Function],
    "meta": [Function],
    "min": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "type": "array",
    "unwrap": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`Code Converters > 제네릭 없는 단순 API - save 5`] = `
[
  "spa",
]
`;

exports[`Code Converters > 제네릭 없는 단순 API - save 6`] = `"object"`;

exports[`Code Converters > 제네릭 없는 단순 API - save 7`] = `"array"`;

exports[`Code Converters > 제네릭 없는 단순 API - save 8`] = `"string"`;

exports[`Code Converters > 제네릭 있는 API - findById 1`] = `
[
  "Resolving Type Parameters",
  "type parameters exist",
  "constraint exists",
  "Filtering API Parameters",
]
`;

exports[`Code Converters > 제네릭 있는 API - findById 2`] = `1`;

exports[`Code Converters > 제네릭 있는 API - findById 3`] = `
{
  "args": undefined,
  "id": "UserSubsetKey",
  "t": "ref",
}
`;

exports[`Code Converters > 제네릭 있는 API - findById 4`] = `
ZodString {
  "and": [Function],
  "array": [Function],
  "base64": [Function],
  "base64url": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "cidrv4": [Function],
  "cidrv6": [Function],
  "clone": [Function],
  "cuid": [Function],
  "cuid2": [Function],
  "date": [Function],
  "datetime": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "type": "string",
  },
  "default": [Function],
  "describe": [Function],
  "duration": [Function],
  "e164": [Function],
  "email": [Function],
  "emoji": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "endsWith": [Function],
  "format": null,
  "guid": [Function],
  "includes": [Function],
  "ipv4": [Function],
  "ipv6": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "jwt": [Function],
  "ksuid": [Function],
  "length": [Function],
  "lowercase": [Function],
  "max": [Function],
  "maxLength": null,
  "meta": [Function],
  "min": [Function],
  "minLength": null,
  "nanoid": [Function],
  "nonempty": [Function],
  "nonoptional": [Function],
  "normalize": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "regex": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "startsWith": [Function],
  "superRefine": [Function],
  "time": [Function],
  "toLowerCase": [Function],
  "toUpperCase": [Function],
  "transform": [Function],
  "trim": [Function],
  "type": "string",
  "ulid": [Function],
  "uppercase": [Function],
  "url": [Function],
  "uuid": [Function],
  "uuidv4": [Function],
  "uuidv6": [Function],
  "uuidv7": [Function],
  "xid": [Function],
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`Code Converters > 제네릭 있는 API - findById 5`] = `
{
  "T": ZodString {
    "and": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`Code Converters > 제네릭 있는 API - findById 6`] = `
{
  "id": ZodNumber {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "checks": [],
      "type": "number",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "finite": [Function],
    "format": null,
    "gt": [Function],
    "gte": [Function],
    "int": [Function],
    "isFinite": true,
    "isInt": false,
    "isNullable": [Function],
    "isOptional": [Function],
    "lt": [Function],
    "lte": [Function],
    "max": [Function],
    "maxValue": Infinity,
    "meta": [Function],
    "min": [Function],
    "minValue": -Infinity,
    "multipleOf": [Function],
    "negative": [Function],
    "nonnegative": [Function],
    "nonoptional": [Function],
    "nonpositive": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "positive": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safe": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "step": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "type": "number",
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "subset": ZodString {
    "and": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`Code Converters > 제네릭 있는 API - findById 7`] = `
[
  "subset",
  "id",
]
`;

exports[`Code Converters > 제네릭 있는 API - findById 8`] = `"object"`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 1`] = `
[
  "Resolving Type Parameters",
  "type parameters exist",
  "constraint exists",
  "Filtering API Parameters",
]
`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 2`] = `1`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 3`] = `
{
  "args": undefined,
  "id": "UserSubsetKey",
  "t": "ref",
}
`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 4`] = `
ZodString {
  "and": [Function],
  "array": [Function],
  "base64": [Function],
  "base64url": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "cidrv4": [Function],
  "cidrv6": [Function],
  "clone": [Function],
  "cuid": [Function],
  "cuid2": [Function],
  "date": [Function],
  "datetime": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "type": "string",
  },
  "default": [Function],
  "describe": [Function],
  "duration": [Function],
  "e164": [Function],
  "email": [Function],
  "emoji": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "endsWith": [Function],
  "format": null,
  "guid": [Function],
  "includes": [Function],
  "ipv4": [Function],
  "ipv6": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "jwt": [Function],
  "ksuid": [Function],
  "length": [Function],
  "lowercase": [Function],
  "max": [Function],
  "maxLength": null,
  "meta": [Function],
  "min": [Function],
  "minLength": null,
  "nanoid": [Function],
  "nonempty": [Function],
  "nonoptional": [Function],
  "normalize": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "regex": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "startsWith": [Function],
  "superRefine": [Function],
  "time": [Function],
  "toLowerCase": [Function],
  "toUpperCase": [Function],
  "transform": [Function],
  "trim": [Function],
  "type": "string",
  "ulid": [Function],
  "uppercase": [Function],
  "url": [Function],
  "uuid": [Function],
  "uuidv4": [Function],
  "uuidv6": [Function],
  "uuidv7": [Function],
  "xid": [Function],
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 5`] = `
{
  "T": ZodString {
    "and": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 6`] = `
{
  "rawParams": ZodOptional {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "and": [Function],
        "array": [Function],
        "base64": [Function],
        "base64url": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "clone": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "default": [Function],
        "describe": [Function],
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "endsWith": [Function],
        "format": null,
        "guid": [Function],
        "includes": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "length": [Function],
        "lowercase": [Function],
        "max": [Function],
        "maxLength": null,
        "meta": [Function],
        "min": [Function],
        "minLength": null,
        "nanoid": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "normalize": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "regex": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "startsWith": [Function],
        "superRefine": [Function],
        "time": [Function],
        "toLowerCase": [Function],
        "toUpperCase": [Function],
        "transform": [Function],
        "trim": [Function],
        "type": "string",
        "ulid": [Function],
        "uppercase": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "xid": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "optional",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "type": "optional",
    "unwrap": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "subset": ZodString {
    "and": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
}
`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 7`] = `
[
  "subset",
  "rawParams",
]
`;

exports[`Code Converters > 제네릭 있는 API - findMany (optional 파라미터) 8`] = `"object"`;
